--- a/app.yaml
+++ b/app.yaml
@@ -5,9 +5,9 @@ threadsafe: false
 api_version: 1
 
 handlers:
-- url: /(.*\.(gif|png|jpg|ico|js|css|manifest))
+- url: /(.*\.(json|gif|png|jpg|ico|js|css|manifest))
   static_files: \1
-  upload: (.*\.(gif|png|jpg|ico|js|css|manifest))
+  upload: (.*\.(json|gif|png|jpg|ico|js|css|manifest))
 
 - url: /robots.txt
   static_files: robots.txt
